--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@preignition/lif",
+  "name": "@preignition/lit-firebase",
   "version": "0.3.2",
   "description": "Webcomponent for interactig with Firebase, inspired by polymerfire, but based on lit-element",
   "author": {
@@ -31,23 +31,24 @@
     "test:bs": "karma start karma.bs.config.js --coverage"
   },
   "dependencies": {
-    "firebase": "^7.8.1",
-    "lit-element": "^2.2.1",
-    "lit-html": "^1.1.2",
+    "dompurify": "^2.0.8",
+    "firebase": "^7.13.2",
+    "lit-element": "^2.3.1",
+    "lit-html": "^1.2.1",
     "prettier": "^1.19.1",
     "pwa-helpers": "^0.9.1"
   },
   "devDependencies": {
-    "@open-wc/eslint-config": "^2.0.0",
-    "@open-wc/prettier-config": "^0.1.10",
-    "@open-wc/testing": "^2.0.0",
-    "@open-wc/testing-karma": "^3.0.0",
-    "@open-wc/testing-karma-bs": "^1.0.0",
-    "deepmerge": "^3.2.0",
-    "es-dev-server": "^1.23.0",
-    "eslint": "^6.1.0",
-    "husky": "^1.0.0",
-    "lint-staged": "^8.0.0"
+    "@open-wc/eslint-config": "^2.0.4",
+    "@open-wc/prettier-config": "^0.1.14",
+    "@open-wc/testing": "^2.5.10",
+    "@open-wc/testing-karma": "^3.3.11",
+    "@open-wc/testing-karma-bs": "^1.3.55",
+    "deepmerge": "^3.3.0",
+    "es-dev-server": "^1.46.1",
+    "eslint": "^6.8.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.2.1"
   },
   "eslintConfig": {
     "extends": [
